--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <img class="img1" src="natigendo.gif" alt="natigendo" />
     <div class="container">
       <h1>🔗 Revelador de Enlaces</h1>
       <p class="subtitle">
@@ -14,7 +15,6 @@
         antes de hacer clic
       </p>
 
-      <!-- 🔹 Ahora es un formulario -->
       <form id="urlForm" class="input-box">
         <input
           id="shortUrl"
@@ -33,6 +33,7 @@
         <ul id="historyList"></ul>
       </div>
     </div>
+    <img class="img2" src="natigendo.gif" alt="natigendo" />
 
     <script src="script.js"></script>
   </body>
